--- a/WPFinterface/MainWindow.xaml
+++ b/WPFinterface/MainWindow.xaml
@@ -48,8 +48,8 @@
             <RowDefinition Height="0" />
             <RowDefinition Height="280" />
             <RowDefinition Height="10" />
-            <RowDefinition Height="260" />
-            <RowDefinition Height="80" />
+            <RowDefinition Height="240" />
+            <RowDefinition Height="100" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
@@ -73,7 +73,7 @@
             </Grid.ColumnDefinitions>
 
             <Border Name="brdr_btnsOPC" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" 
-                    Margin="4" Style="{StaticResource st_border}"  >
+                    Margin="10,4" Style="{StaticResource st_border}"  >
             <Grid Name="grid_btnsOPC"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -85,11 +85,12 @@
                     <ColumnDefinition Width="12*" />
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Name="btns_Search" Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="4,0" Height="Auto" VerticalAlignment="Center">
-                    <StackPanel Orientation="Horizontal" Margin="0">
+                <StackPanel Name="btns_Search" Grid.Row="0" Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Left"
+                            Margin="4,0" Width="184" Height="Auto" VerticalAlignment="Center">
+                    <StackPanel Orientation="Horizontal" Margin="0" >
                         <TextBox x:Name="txt_hostname" Text="{Binding selectedOPCserver.Host}" Margin="0,0" FontWeight="Bold"  Width="80"
-                         Visibility="{Binding ElementName=btn_GetServers}"/>
-                        <Button Content="Search" x:Name="btn_GetServers" HorizontalAlignment="Left" Margin="10,0" VerticalAlignment="Top" 
+                         Visibility="{Binding ElementName=btn_GetServers}" VerticalContentAlignment="Center" />
+                            <Button Content="Search" x:Name="btn_GetServers" HorizontalAlignment="Right" Margin="34,0" VerticalAlignment="Top" 
                         Click="btn_GetServers_Click" IsEnabled="{Binding btn_Search_isEnable}" Style="{StaticResource btn_workBtn}" />
                     </StackPanel>
                 </StackPanel>
@@ -113,20 +114,20 @@
                 </StackPanel>
 
                     <StackPanel Name="btns_Config" Grid.Row="0" Grid.Column="3" Orientation="Horizontal" Margin="4,4" VerticalAlignment="Center" >
-                    <Button Content="Save config" x:Name="btn_SaveConfig" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" 
+                    <Button Content="Save config" x:Name="btn_SaveConfig" HorizontalAlignment="Left" Margin="4,0,0,0" VerticalAlignment="Top" 
                         Click="btn_SaveConfig_Click"  IsEnabled="{Binding btn_SaveConfig_isEnable}" Style="{StaticResource btn_workBtn}"/>
                     <Button Content="Load config" x:Name="btn_LoadConfig" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" 
                         Click="btn_LoadConfig_Click"  IsEnabled="{Binding btn_LoadConfig_isEnable}" Style="{StaticResource btn_workBtn}"/>
                     <Button Content="Try connect" x:Name="btn_ConfigConnect" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" 
                         Click="btn_ConfigConnect_Click" IsEnabled="{Binding btn_TryConfig_isEnable}" Style="{StaticResource btn_workBtn}"  />
-                     <Button x:Name="btn_OraTableInit" Content=".NET?" Width="40" Margin="8,0" 
+                     <Button x:Name="btn_OraTableInit" Content=".NET?" Width="40" Margin="10,0" 
                                 Click="btn_OraTableInit_Click" Style="{StaticResource btn_workBtn}"/>
                     </StackPanel>
 
             </Grid>
             </Border>
             <ListBox x:Name="lst_Servers" Grid.Row="1" Grid.Column="0" ItemsSource="{Binding opcListServers}"  IsEnabled="{Binding list_Servers_isEnable}"
-                     Height="Auto" Margin="4" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+                     Height="Auto" Margin="10,4,4,4" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
                      MouseDoubleClick="lst_Servers_MouseDoubleClick"  SelectionChanged="lst_Servers_SelectionChanged" >
                 <ListBox.ItemTemplate >
                     <DataTemplate>
@@ -215,21 +216,16 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-
-            <StackPanel Name="panel_Errors" Orientation="Vertical" Grid.Row="2" Grid.Column="0" Margin="4, 0" VerticalAlignment="Center">
-                <Border BorderThickness="1" BorderBrush="Gray" Width="192" Height="24"  Margin="0" HorizontalAlignment="Left"  >
-                    <StackPanel Orientation="Horizontal" >
-                        <StackPanel Orientation="Horizontal" Background="{Binding opcError.backColor}"  HorizontalAlignment="Stretch">
-                            <TextBlock Text=" Err:" FontSize="11" VerticalAlignment="Center"/>
-                            <TextBlock Text="{Binding opcError.code }" VerticalAlignment="Center" Margin="10,0" Width="30" Foreground="{Binding opcError.foreColor}" />
-                            <TextBlock Text="{Binding opcError.message}" VerticalAlignment="Center" Margin="4,0" Width="Auto" Foreground="{Binding opcError.foreColor}" />
-                        </StackPanel>
-                    </StackPanel>
-                </Border>
-            </StackPanel>
+            <Border Grid.Row="2" Grid.Column="0" Margin="10,0,4,0" BorderThickness="1" BorderBrush="Gray" Width="186" Height="24"  HorizontalAlignment="Left"  >
+                <StackPanel Name="panel_Errors" Orientation="Horizontal" Background="{Binding opcError.backColor}"  HorizontalAlignment="Stretch">
+                    <TextBlock Text=" Err:" FontSize="11" VerticalAlignment="Center"/>
+                    <TextBlock Text="{Binding opcError.code }" VerticalAlignment="Center" Margin="10,0" Width="30" Foreground="{Binding opcError.foreColor}" />
+                    <TextBlock Text="{Binding opcError.message}" VerticalAlignment="Center" Margin="4,0" Width="Auto" Foreground="{Binding opcError.foreColor}" />
+                </StackPanel>
+            </Border>
 
             <StackPanel Name="panel_url" Orientation="Vertical" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" VerticalAlignment="Center">
-                <Border BorderThickness="1" BorderBrush="Gray" Width="Auto" Height="24" Margin="4,0" Background="{Binding infoLineColor}" >
+                <Border BorderThickness="1" BorderBrush="Gray" Width="Auto" Height="24" Margin="4,0,10,0" Background="{Binding infoLineColor}" >
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
                         <TextBlock Text="{Binding selectedOPCserver.UrlString}"  FontSize="12" TextAlignment="Center" Margin="0"
                                 HorizontalAlignment="Stretch"  VerticalAlignment="Center" />
@@ -252,7 +248,11 @@
                 <ColumnDefinition Width="8*" />
             </Grid.ColumnDefinitions>
 
-            <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Style="{StaticResource st_border}" Margin="4,0" >
+            <Rectangle Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Stroke="Gray" Margin="0,0,0,10" Opacity="0.5"
+                       Fill="WhiteSmoke" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+
+            <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Style="{StaticResource st_border}" Margin="10,0" >
+
             <Grid Name="grid_DbCaption"   Width="Auto" Height="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -277,8 +277,8 @@
                     <Button Content="Clear" x:Name="btn_ClearSubscription" HorizontalAlignment="Left" Margin="10,0,0,0" 
                         Click="btn_ClearSubscription_Click" IsEnabled="{Binding btn_ClearTags_isEnable}" Style="{StaticResource btn_workBtn}" />
 
-                        <Border Style="{StaticResource st_border}" Width="Auto" Margin="20,0" Background="#FFD0D7DC">
-                            <StackPanel Orientation="Horizontal"   >
+                        <Border Style="{StaticResource st_border}" Width="Auto" Margin="18,0" Background="#FFD0D7DC">
+                            <StackPanel Orientation="Horizontal"  >
                                 <Label Content="N_STAN" Width="Auto" />
                                 <TextBox Text="{Binding specialEnt.N_STAN}" Width="26" Margin="4,2" />
                                 <Label Content="G_UCHASTOK" Width="Auto" />
@@ -294,10 +294,11 @@
                        VerticalAlignment="Center"  />
                 </StackPanel>
             </Grid>
+
             </Border>
             <StackPanel Name="panel_LocalDb" Grid.Row="1" Grid.Column="0" >
-                <Border Background="#FFECECEC" Margin="4,10" BorderBrush="Gray" BorderThickness="1" >
-                    <StackPanel Orientation="Vertical" >
+                <Border Background="#FFECECEC" Margin="10,10" BorderBrush="Gray" BorderThickness="1" Height="180" >
+                    <StackPanel Orientation="Vertical" Margin="10" >
                         <Grid x:Name="grid_LocalDB" Margin="0"  DataContext="{Binding }">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
@@ -312,22 +313,32 @@
                                 <ColumnDefinition Width="10*" />
                             </Grid.ColumnDefinitions>
                             <Label Grid.Row="0" Grid.Column="0" Content="Status" />
-                            <TextBlock Grid.Row="0" Grid.Column="1" Text="Not Loaded" Background="DarkRed" Foreground="White" 
-                                       HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" FontSize="14" Width="100"   />
-                            <TextBlock Grid.Row="0" Grid.Column="1" Text=" LOADED " Background="LightGreen" Foreground="Gray" 
-                                       HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" FontSize="12" Width="100" 
+                            <Label Grid.Row="0" Grid.Column="1" Content="NotLoaded" Background="DarkRed" Foreground="White" 
+                                       HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" Margin="2"  FontSize="12" Width="70" Height="24"   />
+                            <Label Grid.Row="0" Grid.Column="1" Content=" LOADED " Background="LightGreen" Foreground="Gray" 
+                                       HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" Margin="2" FontSize="12" Width="70" Height="24" 
                                    Visibility="{Binding isLocalDBConnected, Converter={StaticResource BoolToVis}}" />
 
-                            <Label Grid.Row="1" Grid.Column="0" Content="Create new" />
-                            <Button Grid.Row="1" Grid.Column="1" x:Name="btn_ShowLocalTable" Style="{StaticResource btn_workBtn}"
-                                    Content="Local DB" Margin="2" Click="btn_ShowLocalTable_Click"/>
+                            <Label Grid.Row="1" Grid.Column="0" Content="New local Db" />
+                            <Button Grid.Row="1" Grid.Column="1" x:Name="btn_CreateLocalDb" Style="{StaticResource btn_workBtn}"
+                                    Content="Create Db" Margin="2" Click="btn_CreateLocalDb_Click"/>
+                            <Label Grid.Row="2" Grid.Column="0" Content="Load local Db" />
+                            <Button Grid.Row="2" Grid.Column="1" x:Name="btn_ShowLocalTable" Style="{StaticResource btn_workBtn}"
+                                    Content="Load DB" Margin="2" Click="btn_ShowLocalTable_Click"/>
 
-                            <Label Grid.Row="2" Grid.Column="0" Content="Load" />
-                            <Button Grid.Row="2" Grid.Column="1" x:Name="btn_LocalTableView" Style="{StaticResource btn_workBtn}"
+                            <Label Grid.Row="3" Grid.Column="0" Content="View Local Data" />
+                            
+                            <Border Grid.Row="3" Grid.Column="0" Style="{StaticResource st_border}" Background="#FF83D88F" Margin="2"
+                                    Visibility="{Binding isLocalDbLoading, Converter={StaticResource BoolToVis}}">
+                                <Label  Content="Loading..." HorizontalContentAlignment="Center" FontSize="13"  />
+                            </Border>
+                            
+                            
+                            <Button Grid.Row="3" Grid.Column="1" x:Name="btn_LocalTableView" Style="{StaticResource btn_workBtn}"
                                     Content="View"  Margin="2" Click="btn_LocalTableView_Click"/>
 
-                            <Label Grid.Row="3" Grid.Column="0" Content="Test insert" />
-                            <Button Grid.Row="3" Grid.Column="1"  Name="btn_LocalTableInsert" Style="{StaticResource btn_workBtn}"
+                            <Label Grid.Row="4" Grid.Column="0" Content="Test insert" />
+                            <Button Grid.Row="4" Grid.Column="1"  Name="btn_LocalTableInsert" Style="{StaticResource btn_workBtn}"
                                     Content="Test Insert L" Margin="2" Click="btn_LocalTableInsert_Click"/>
 
                         </Grid>
@@ -336,9 +347,9 @@
             </StackPanel>
             
             <StackPanel Name="panel_RemoteDb" Grid.Row="1" Grid.Column="2" >
-                <Border Background="#FFECECEC" Margin="4,10" BorderBrush="Gray" BorderThickness="1" >
-                    <StackPanel Orientation="Vertical" >
-                        <Grid x:Name="grid_RemoteDB" Margin="0"  DataContext="{Binding }">
+                <Border Background="#FFECECEC" Margin="5,10,10,10" BorderBrush="Gray" BorderThickness="1" Height="180" >
+                    <StackPanel Orientation="Vertical" Margin="0,10,0,0" >
+                        <Grid x:Name="grid_RemoteDB" Margin="0" DataContext="{Binding }">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
@@ -361,8 +372,13 @@
                             <Label Grid.Row="1" Grid.Column="0" Content="Test connection" />
                             <Button Grid.Row="1" Grid.Column="1" Content="Test Ora" x:Name="btn_oraTestConnection" Margin="2" 
                                 Click="btn_oraTestConnection_Click"  Style="{StaticResource btn_workBtn}" />
+                            
+                            <Label Grid.Row="2" Grid.Column="0" Content="View remote Data" />
+                            <Border Grid.Row="2" Grid.Column="0" Style="{StaticResource st_border}" Background="#FF83D88F" Margin="0"
+                                    Visibility="{Binding isRemoteDbLoading, Converter={StaticResource BoolToVis}}">
+                                <Label  Content="Loading..." HorizontalContentAlignment="Center" FontSize="13"  />
+                            </Border>
 
-                            <Label Grid.Row="2" Grid.Column="0" Content="Load table" />
                             <Button Grid.Row="2" Grid.Column="1" x:Name="btn_OraShowTable" Style="{StaticResource btn_workBtn}"
                                     Content="View" Margin="2" Click="btn_OraShowTable_Click"/>
 
@@ -370,6 +386,9 @@
                             <Button Grid.Row="3" Grid.Column="1" x:Name="btn_RemoteTableInsert" Style="{StaticResource btn_workBtn}"
                                     Content="Test Insert R"  Margin="2" Click="btn_RemoteTableInsert_Click"/>
 
+                            <Label Grid.Row="4" Grid.Column="0" Content="Init table" />
+                            <Button Grid.Row="4" Grid.Column="1" x:Name="btn_RemoteInitFields" Style="{StaticResource btn_workBtn}"
+                                    Content="Get Fields"  Margin="2" Click="btn_RemoteInitFields_Click"/>
                         </Grid>
 
                         <Border Name="panel_SyncInProgress" Background="#FFECECEC" Margin="4,10" BorderBrush="Gray" BorderThickness="1"
@@ -436,17 +455,38 @@
             </StackPanel>
         </Grid>
 
+
         <StackPanel Name="log_panel" Grid.Row="4" Grid.Column="0" Orientation="Vertical"  Margin="4,0" >
-            <ListBox    x:Name="list_Log"  HorizontalAlignment="Stretch" Margin="4,0" VerticalAlignment="Stretch"
-                     MinWidth="700" Height="80" ItemsSource="{Binding messageLog, Mode=OneWay}" local:ListBoxExtenders.AutoScrollToEnd="True"  >
+            <Border Style="{StaticResource st_border}" Margin="4,0" BorderThickness="1,1,1,0"  >
+                <StackPanel Orientation="Horizontal" Height="24" Margin="5,0" >
+                <TextBlock Text="Filter log " FontSize="12" VerticalAlignment="Center" />
+                <Button Name="btn_LogFilterAll" Content="All" Height="20" Width="60" 
+                        Tag="{Binding btn_LogFilterAll_Tag}" Background="{Binding btn_LogFilterAll_Brush}" Click="btn_LogFilter_Click" />
+                <Button Name="btn_LogFilterGUI" Content="GUI" Height="20" Width="60" 
+                        Tag="{Binding btn_LogFilterGUI_Tag}" Background="{Binding btn_LogFilterGUI_Brush}" Click="btn_LogFilter_Click" />
+                <Button Name="btn_LogFilterOPC" Content="OPC" Height="20" Width="60" 
+                        Tag="{Binding btn_LogFilterOPC_Tag}" Background="{Binding btn_LogFilterOPC_Brush}" Click="btn_LogFilter_Click" />
+                <Button Name="btn_LogFilterLocalDB" Content="LocalDb" Height="20" Width="60" 
+                        Tag="{Binding btn_LogFilterLocalDb_Tag}" Background="{Binding btn_LogFilterLocalDb_Brush}" Click="btn_LogFilter_Click" />
+                <Button Name="btn_LogFilterRemoteDb" Content="RemoteDb" Height="20" Width="60" 
+                        Tag="{Binding btn_LogFilterRemoteDb_Tag}" Background="{Binding btn_LogFilterRemoteDb_Brush}" Click="btn_LogFilter_Click" />
+            </StackPanel>
+            </Border>
+            
+        <ListBox    x:Name="list_Log"  HorizontalAlignment="Stretch" Margin="4,0" VerticalAlignment="Stretch" 
+                     MinWidth="700" Height="74" ItemsSource="{Binding messageLogFiltered, Mode=OneWay}" local:ListBoxExtenders.AutoScrollToEnd="True"  >
                 <ListBox.ItemTemplate >
                     <DataTemplate>
-                        <TextBlock Text="{Binding Path=Entry}"/>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Path=Tag}" Width="64" Foreground="#FF5579C7" FontWeight="Bold"/>
+                            <TextBlock Text="{Binding Path=Entry}" TextWrapping="Wrap" Width="780"/>
+                        </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
         </StackPanel>
-
+        
+        
     </Grid>
 
 </Window>
